# sorai

./: .dockerignore  .editorconfig  .env.example  .gitignore  .oxfmtrc.json  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  compose.yml  config.toml.example  index.html  justfile  package.json  pnpm-lock.yaml  prometheus.yml  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.storybook/: main.ts  preview.ts
app/: app.tsx  errors.tsx  fetcher.ts  main.tsx  stores.ts  utils.ts
app/components/: accordion.tsx  alert-dialog.tsx  alert.tsx  autocomplete.tsx  avatar.tsx  badge.tsx  breadcrumb.tsx  button.tsx  calendar.tsx  card.tsx  checkbox.tsx  chip.tsx  collapsible.tsx  combobox.tsx  command.tsx  context-menu.tsx  dialog.tsx  divider.tsx  empty-state.tsx  field.tsx  fieldset.tsx  form.tsx  icon-box.tsx  input-group.tsx  input-password.tsx  input.tsx  item.tsx  kbd.tsx  label.tsx  menu.tsx  menubar.tsx  meter.tsx  navigation-menu.tsx  number-field.tsx  pagination.tsx  popover.tsx  preview-card.tsx  progress.tsx  provider.tsx  radio.tsx  (+16 more)
app/components/selia/: accordion.tsx  alert-dialog.tsx  alert.tsx  autocomplete.tsx  avatar.tsx  badge.tsx  breadcrumb.tsx  button.tsx  card.tsx  checkbox.tsx  chip.tsx  collapsible.tsx  combobox.tsx  command.tsx  dialog.tsx  divider.tsx  field.tsx  fieldset.tsx  form.tsx  heading.tsx  icon-box.tsx  input-group.tsx  input.tsx  item.tsx  kbd.tsx  label.tsx  menu.tsx  menubar.tsx  meter.tsx  number-field.tsx  pagination.tsx  popover.tsx  preview-card.tsx  progress.tsx  radio.tsx  scroll-area.tsx  select.tsx  separator.tsx  sidebar.tsx  slider.tsx  (+12 more)
app/components/ui/: PasswordInput.tsx  PasswordStrength.tsx
app/guards/: context.ts  index.ts  procedures.ts  provider.tsx
app/hooks/: use-mobile.ts  use-sidebar.tsx
app/routes/: __root.tsx
app/routes/(app)/: -command.tsx  -navbar.tsx  -user-menu.tsx  index.tsx  profile.tsx  route.tsx
app/routes/(app)/-profile/: email-card.tsx  password-card.tsx  profile-card.tsx  sessions-card.tsx
app/routes/(app)/profile/: change-email.tsx  change-password.tsx  index.tsx  route.tsx  sessions.tsx
app/routes/(auth)/: forgot-password.tsx  reset-password.$token.tsx  route.tsx  signin.tsx
app/schemas/: api.schema.ts  auth.schema.ts  system.schema.ts  user.schema.ts
app/services/: auth.service.ts  system.service.ts  user.service.ts
app/styles/: globals.css
app/utils/: fetcher.ts
crates/vite-axum/: Cargo.toml  README.md
crates/vite-axum/examples/: advanced.rs  basic.rs
crates/vite-axum/src/: lib.rs  vite_app_factory.rs  vite_proxy_options.rs
crates/vite-axum/tests/: config_tests.rs  proxy_tests.rs  router_tests.rs  vite_detection_tests.rs
crates/vite-plugin/: Cargo.toml  LICENSE  README.md
crates/vite-plugin/src/: lib.rs  proxy_vite_options.rs  vite_app_factory.rs
docker/: entrypoint.sh  prometheus.yml
docker/grafana/dashboards/: sorai-dashboard.json
docker/grafana/provisioning/dashboards/: dashboard.yml
docker/grafana/provisioning/datasources/: prometheus.yml
docs/: CONFIGURATION.md  xh-requests.md
docs/requests/chat-completions/: simple-chat.json  with-fallback-providers.json  with-structured-content.json  with-tool-calling.json
docs/requests/text-completions/: simple-text-completions.json  with-stop-sequences.json
docs/responses/_common_/: 400.json  401.json  429.json  500.json
docs/responses/chat-completions/: simple-chat-200.json  tool-calling-200.json
docs/responses/chat-completions/simple-chat/: 200.json  400.json  429.json
docs/responses/chat-completions/tool-calling/: 200.json  500.json
docs/responses/text-completions/: 200.json  text-completions-200.json
grafana/provisioning/datasources/: prometheus.yml
specs/: hello-word.httl  metrics.httl
specs/chat-completions/: simple-chat.httl  with-fallback-providers.httl  with-structured-content.httl  with-tool-calling.httl
specs/internal-system/: healthz.httl
specs/text-completions/: simple-text-completions.httl  with-stop-sequences.httl
src/: config.rs  http.rs  lib.rs  main.rs  router.rs
src/config/: app.rs  builder.rs  cors.rs  database.rs  logging.rs  mailer.rs  mod.rs  session.rs  sorai.rs  storage.rs
src/config/providers/: bedrock.rs  cohere.rs  mod.rs  vertex.rs
src/handler/: completions.rs  health.rs  metrics.rs  mod.rs  not_found.rs
src/http/: auth.rs  mod.rs  request_id.rs  response.rs  router.rs  server.rs
src/http/handler/: completions.rs  health.rs  metrics.rs  mod.rs  spa.rs  system.rs
src/http/middleware/: auth.rs  connection_info.rs  cors.rs  metrics.rs  mod.rs
src/http/schemas/: mod.rs  sorai.rs
src/metrics/: mod.rs
src/providers/: mod.rs  models.rs
src/providers/anthropic/: config.rs  mod.rs
src/providers/azure_openai/: config.rs
src/providers/bedrock/: config.rs
src/providers/cohere/: config.rs
src/providers/openai/: config.rs  mod.rs  types.rs
src/providers/vertex/: config.rs
src/utils/: response.rs  time.rs
stories/: accordion.stories.tsx  alert-dialog.stories.tsx  alert.stories.tsx  autocomplete.stories.tsx  avatar.stories.tsx  badge.stories.tsx  breadcrumb.stories.tsx  button.stories.tsx  calendar.stories.tsx  card.stories.tsx  checkbox.stories.tsx  chip.stories.tsx  collapsible.stories.tsx  combobox.stories.tsx  command.stories.tsx  context-menu.stories.tsx  dialog.stories.tsx  divider.stories.tsx  empty-state.stories.tsx  field.stories.tsx  fieldset.stories.tsx  form.stories.tsx  heading.stories.tsx  icon-box.stories.tsx  input-group.stories.tsx  input.stories.tsx  introduction.mdx  item.stories.tsx  kbd.stories.tsx  label.stories.tsx  menu.stories.tsx  menubar.stories.tsx  meter.stories.tsx  navigation-menu.stories.tsx  number-field.stories.tsx  pagination.stories.tsx  popover.stories.tsx  preview-card.stories.tsx  progress.stories.tsx  radio.stories.tsx  (+18 more)
tests/: basic_test.rs  completions_test.rs  config_test.rs  health_test.rs  healthcheck_test.rs  integration_test.rs  metrics_test.rs  server_test.rs  utils_response_test.rs
