[package]
name = "sorai"
version = "0.0.0"
description = "Fast LLM gateway written in Rust"
authors = ["Aris Ripandi <aris@duck.com>"]
repository = "https://github.com/riipandi/sorai"
documentation = "https://github.com/riipandi/sorai"
keywords = ["axum", "api", "llm", "proxy", "gateway"]
license = "MIT OR Apache-2.0"
rust-version = "1.87"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["json-lines", "typed-header"] }
chrono = { version = "0.4", features = ["serde"] }
clap = "4.5"
clap_derive = "4.5"
metrics = { version = "0.24", default-features = false }
metrics-exporter-prometheus = { version = "0.17", default-features = false }
reqwest = { version = "0.12", features = ["stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tabled = "0.20"
thiserror = "2.0"
tokio = { version = "1.45", features = ["full"] }
toml = "0.8"
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "request-id", "timeout", "trace"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["chrono", "env-filter", "time"] }
type-safe-id = { version = "0.3", features = ["serde"] }

# Optimized for bundle size. If you want faster builds comment out/delete this section.
# Reference: https://doc.rust-lang.org/cargo/reference/profiles.html
# Reference: https://tauri.app/concept/size/
[profile.release]
codegen-units = 16   # Allows LLVM to perform better optimization, reduce number of codegen units to increase optimizations.
lto = true           # Enables link-time-optimizations. LTO can produce better optimized code, at the cost of longer linking time.
opt-level = 1        # Use slightly better optimizations. Use "s" if you prefer smaller binaries.
panic = "abort"      # Higher performance by disabling panic handlers.
debug = false        # Disable debug on production build.
strip = true         # Ensures debug symbols are removed.

[profile.dev]
incremental = true   # Compile your binary in smaller steps.
debug = "limited"    # Debug info without type or variable-level information.
